# ccds_try

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
model_name/: __init__.py  dataset.py  features.py  plots.py
model_name/modeling/: predict.py  train.py
notebooks/: main.ipynb
